Fixed overflow issues with the field collapse box

--- a/app/assets/stylesheets/experiments.css.scss
+++ b/app/assets/stylesheets/experiments.css.scss
@@ -2,6 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#collapseFields
+{
+  width: 100%;
+  overflow-x: scroll;
+}
+
 .field_edit_link
 {
   vertical-align: super;
